<resources>
    <string name="app_name">Pixiv for Muzei Plus</string>
    <string name="source_description">Sourcing artworks from Pixiv for Muzei live wallpaper By Democyann</string>
    <string name="time_default">30</string>
    <string name="method_default">0</string>

    <string name="push_set">Push Settings</string>
    <string name="change_time">Change Interval</string>
    <string name="change_time_li">Configure the interval of image changings</string>
    <string name="only_wifi">Changing image under WiFi only</string>
    <string name="pixiv_login_info">Pixiv Login</string>
    <string name="set_pixiv_id">Pixiv ID</string>
    <string name="input_pixiv_id">Input Your PixivID</string>
    <string name="set_pixiv_pass">Password</string>
    <string name="input_pixiv_pass">Inpur Your Pixiv Password</string>
    <string name="u_err">** Please Set Up Pixiv ID and Password **</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Now Loading ...</string>
    <string name="login_failed">Login failed.Please check Pixiv ID and password.</string>
    <string name="r18_enable">Don\'t Push R18 Image</string>
    <string name="tag_enable">Enable Tag Filter</string>
    <string name="tag_enable_li">Unrecommended for user not logged in, may substantially increase pushing time</string>
    <string name="tag_set_li">Don\'t push works with these tags</string>
    <string name="tags_set">Set Tag Filters</string>
    <string name="tag_set_title">Enter the tags, separated by commas</string>
    <string name="views_set">Views</string>
    <string name="views_set_li">Set min views</string>
    <string name="views_set_title">min views(0-50000)</string>
    <string name="method_title">Push Mode</string>
    <string name="we">The application is Muzei Wallpaper Source,Plese install Muzei Live Wallpaper</string>
    <string name="permission">Please allow storage permissions</string>
    <string name="showico">Show icon</string>
    <string name="hideico">Hide icon</string>
    <string name="autopx_set">Adapt the image by screen size</string>
    <string name="autopx_set_li">Will automatically filter images that do not meet the screen size</string>
    <string name="iconswitch">Toggles the icon display</string>


</resources>
