<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:title="@string/pixiv_login_info">
        <EditTextPreference
            android:key="pixivid"
            android:title="@string/set_pixiv_id"
            android:dialogTitle="@string/input_pixiv_id"
            />
        <EditTextPreference
            android:key="password"
            android:inputType="textPassword"
            android:title="@string/set_pixiv_pass"
            android:dialogTitle="@string/input_pixiv_pass"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/push_set">
        <ListPreference
            android:key="time_change"
            android:title="@string/change_time"
            android:summary="@string/change_time_li"
            android:entries="@array/pref_changeInterval_entries"
            android:entryValues="@array/pref_changeInterval_entryValues"
            android:defaultValue="@string/time_default"
            android:dialogTitle="@string/change_time" />
        <CheckBoxPreference
            android:key="only_wifi"
            android:title="@string/only_wifi"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="is_no_r18"
            android:title="@string/r18_enable"
            android:defaultValue="true"
            />
        <ListPreference
            android:key="method"
            android:title="@string/method_title"
            android:entries="@array/method_string"
            android:entryValues="@array/method_values"
            android:defaultValue="0"
            android:dialogTitle="@string/method_title"

            />
        <CheckBoxPreference
            android:key="is_tag"
            android:title="@string/tag_enable"
            android:summary="@string/tag_enable_li"
            android:defaultValue="false"
            />
        <EditTextPreference
            android:key="tags"
            android:title="@string/tags_set"
            android:summary="@string/tag_set_li"
            android:dialogTitle="@string/tag_set_title"
            android:dependency="is_tag"
            />
        <EditTextPreference
            android:key="views"
            android:inputType="number"
            android:title="@string/views_set"
            android:summary="@string/views_set_li"
            android:dialogTitle="@string/views_set_title"
            android:defaultValue="0"
            />

        <CheckBoxPreference
            android:key="is_autopx"
            android:title="@string/autopx_set"
            android:summary="@string/autopx_set_li"
            android:defaultValue="false"
            />
        <Preference
            android:title="@string/iconswitch">
            <intent
                android:action="moe.democyann.pixivformuzeiplus.activity.IcoActivity"
                android:targetClass="moe.democyann.pixivformuzeiplus.activity.IcoActivity"
                android:targetPackage="moe.democyann.pixivformuzeiplus"  />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="About">
    <ListPreference
        android:title="Version"
        android:summary="V1.2.1"
        android:enabled="false"
        android:layout_height="wrap_content" />
        <Preference
            android:title="Author"
            android:summary="Blog:democyann">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://democyann.moe/2017/01/343/" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Translator">
        <Preference
            android:title="日本語"
            android:summary="Twitter:琉千歌_Luccica">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://twitter.com/Stella_Luccica" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
